tests/positive/test_type_eval.orb
import "util/io.orb";

fnc main () () {
    eval (sym (ty0 i32));
    eval (sym (a:ty0 100));
    println_i32 (eval a);

    eval (sym (id0 \cn));
    eval (sym (b:(i32 id0) 101));
    println_i32 (eval b);

    eval (sym (l0 4));
    eval (sym c:(i32 l0));
    eval (= ([] c 0) 102);
    println_i32 (eval ([] c 0));

    eval (sym (ty1 bool));
    eval (sym (d:(i32 ty1) (103 false)));
    println_i32 (eval (. d 0));
};